--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,10 @@ pylint = "*"
 
 [packages]
 django = "*"
+pygraphviz = "*"
+pyparsing = "*"
+pydot = "*"
+django-registration-redux = "*"
 
 [requires]
 python_version = "3.7"
